# lvc-ui/src/app/services/models/authentication-request.ts
@@ -2,8 +2,7 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
-export interface UserDto {
-  displayName?: string;
-  email?: string;
-  id?: number;
+export interface AuthenticationRequest {
+  email: string;
+  password: string;
 }
